fix kanban horizontal scroll

--- a/src/global.scss
+++ b/src/global.scss
@@ -2752,6 +2752,7 @@ hr {
 .kanban-board-container {
   width: 100%;
   flex: 1;
+  min-width: 0;
   overflow-x: auto;
   overflow-y: hidden;
   display: flex;
